ABL Statistics post-processing utility
Implement a boundary layer post-processing utility to generate spatially
and temporally averaged quantities of interest:

  - Velocity
  - Resolved stress
  - SFS stress
  - Temperature
  - Temperature flux
  - Temperature variance
  - uTau

This utility builds on top of TurbulenceAveragingPostProcessing utility, the
temporal averages are computed in that class.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -212,3 +212,4 @@ add_subdirectory(property_evaluator)
 add_subdirectory(tabular_props)
 add_subdirectory(user_functions)
 add_subdirectory(xfer)
+add_subdirectory(wind_energy)
