Updating mesh submodule to point to exawind mesh repo.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "reg_tests/mesh"]
 	path = reg_tests/mesh
-	url = https://github.com/NaluCFD/NaluMesh.git
+	url = https://github.com/Exawind/meshes.git
         ignore = dirty
