Reducing cmake configuration verbosity.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,30 +17,15 @@ option(ENABLE_WARNINGS "Add -Wall to show compiler warnings" ON)
 option(ENABLE_EXTRA_WARNINGS "Add -Wextra to show even more compiler warnings" OFF)
 
 ########################## TRILINOS ####################################
-message("   Trilinos_DIR = ${Trilinos_DIR}")
 set(CMAKE_PREFIX_PATH ${Trilinos_DIR} ${CMAKE_PREFIX_PATH})
 set(CMAKE_PREFIX_PATH ${Trilinos_PATH} ${CMAKE_PREFIX_PATH})
 find_package(Trilinos REQUIRED)
+if(Trilinos_FOUND)
+  message("-- Found Trilinos = ${Trilinos_DIR}")
+endif()
 include_directories(SYSTEM ${Trilinos_INCLUDE_DIRS})
 include_directories(SYSTEM ${Trilinos_TPL_INCLUDE_DIRS})
 
-message("\nFound Trilinos!  Here are the details: ")
-message("   Trilinos_DIR = ${Trilinos_DIR}")
-message("   Trilinos_VERSION = ${Trilinos_VERSION}")
-message("   Trilinos_PACKAGE_LIST = ${Trilinos_PACKAGE_LIST}")
-message("   Trilinos_LIBRARIES = ${Trilinos_LIBRARIES}")
-message("   Trilinos_BIN_DIRS = ${Trilinos_BIN_DIRS}")
-message("   Trilinos_INCLUDE_DIRS = ${Trilinos_INCLUDE_DIRS}")
-message("   Trilinos_LIBRARY_DIRS = ${Trilinos_LIBRARY_DIRS}")
-message("   Trilinos_TPL_LIST = ${Trilinos_TPL_LIST}")
-message("   Trilinos_TPL_INCLUDE_DIRS = ${Trilinos_TPL_INCLUDE_DIRS}")
-message("   Trilinos_TPL_LIBRARIES = ${Trilinos_TPL_LIBRARIES}")
-message("   Trilinos_TPL_LIBRARY_DIRS = ${Trilinos_TPL_LIBRARY_DIRS}")
-message("   Trilinos_BUILD_SHARED_LIBS = ${Trilinos_BUILD_SHARED_LIBS}")
-message("   Trilinos_CXX_COMPILER_FLAGS = ${Trilinos_CXX_COMPILER_FLAGS}")
-message("End of Trilinos details\n")
-
-message("Setting and checking of compilers:")
 set(CMAKE_CXX_COMPILER ${Trilinos_CXX_COMPILER} )
 set(CMAKE_C_COMPILER ${Trilinos_C_COMPILER} )
 set(CMAKE_Fortran_COMPILER ${Trilinos_Fortran_COMPILER} )
@@ -49,7 +34,7 @@ set(CMAKE_Fortran_COMPILER ${Trilinos_Fortran_COMPILER} )
 if(Trilinos_BUILD_SHARED_LIBS)
   set(Nalu_LIBRARY_TYPE SHARED)
   set(BUILD_SHARED_LIBS ON)
-  message("-- Building Nalu with shared libraries")
+  #message("-- Building Nalu with shared libraries")
 else(Trilinos_BUILD_SHARED_LIBS)
   set(Nalu_LIBRARY_TYPE STATIC)
 endif(Trilinos_BUILD_SHARED_LIBS)
@@ -262,5 +247,3 @@ if(ENABLE_TESTS)
    include(CTest)
    add_subdirectory(reg_tests)
 endif()
-
-message("\nAnd CMake says...:")
