--- a/include/user_functions/CMakeLists.txt
+++ b/include/user_functions/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_sources(
+add_headers(
    BoundaryLayerPerturbationAuxFunction.h
    BoussinesqNonIsoEnthalpySrcNodeSuppAlg.h
    BoussinesqNonIsoMomentumSrcNodeSuppAlg.h
