--- a/include/pmr/CMakeLists.txt
+++ b/include/pmr/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_headers(
+add_sources(GlobalHeaderList
    AssembleRadTransEdgeSolverAlgorithm.h
    AssembleRadTransEdgeUpwindSolverAlgorithm.h
    AssembleRadTransWallSolverAlgorithm.h
