--- a/include/property_evaluator/CMakeLists.txt
+++ b/include/property_evaluator/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_headers(
+add_sources(GlobalHeaderList
    ConstantPropertyEvaluator.h
    EnthalpyPropertyEvaluator.h
    GenericPropAlgorithm.h
