--- a/include/user_functions/CMakeLists.txt
+++ b/include/user_functions/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_headers(
+add_sources(GlobalHeaderList
    BoundaryLayerPerturbationAuxFunction.h
    BoussinesqNonIsoEnthalpySrcNodeSuppAlg.h
    BoussinesqNonIsoMomentumSrcNodeSuppAlg.h
