--- a/src/user_functions/CMakeLists.txt
+++ b/src/user_functions/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_sources(
+add_sources(GlobalSourceList
    BoundaryLayerPerturbationAuxFunction.C
    BoussinesqNonIsoEnthalpySrcNodeSuppAlg.C
    BoussinesqNonIsoMomentumSrcNodeSuppAlg.C
