--- a/src/mesh_motion/CMakeLists.txt
+++ b/src/mesh_motion/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_sources(
+add_sources(GlobalSourceList
    AssembleMeshDisplacementElemSolverAlgorithm.C
    AssemblePressureForceBCSolverAlgorithm.C
    MeshDisplacementEquationSystem.C
