--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,6 @@ include_directories(SYSTEM ${Trilinos_TPL_INCLUDE_DIRS})
 if(Trilinos_BUILD_SHARED_LIBS)
   set(Nalu_LIBRARY_TYPE SHARED)
   set(BUILD_SHARED_LIBS ON)
-  #message("-- Building Nalu with shared libraries")
 else(Trilinos_BUILD_SHARED_LIBS)
   set(Nalu_LIBRARY_TYPE STATIC)
 endif(Trilinos_BUILD_SHARED_LIBS)
@@ -107,7 +106,6 @@ if(ENABLE_TIOGA)
 endif()
 
 ########################### NALU #####################################
-
 # Add any extra flags based on compiler and/or OS
 message("-- CMAKE_SYSTEM_NAME = ${CMAKE_SYSTEM_NAME}")
 message("-- CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
@@ -156,7 +154,7 @@ if(ENABLE_HYPRE)
   endif()
 endif()
 
-################################# TAG VERSIONS #####################################
+########################### TAG VERSIONS #####################################
 include(GetGitRevisionDescription)
 get_git_head_revision(NALU_GITREFSPEC NALU_GIT_COMMIT_SHA)
 if (NALU_GIT_COMMIT_SHA)
@@ -187,20 +185,35 @@ configure_file("${CMAKE_SOURCE_DIR}/cmake/NaluVersionInfo.h.in"
   "${CMAKE_BINARY_DIR}/include/NaluVersionInfo.h" @ONLY)
 #### END TAG VERSIONS
 
-file(GLOB SOURCE src/*.C src/*/*.C src/*/*.F)
-file(GLOB HEADER include/*.h include/*/*.h
-  ${CMAKE_CURRENT_BINARY_DIR}/include/*.h)
+# Add all source files from source subdirectories
+function(add_sources target_list)
+   foreach(_source IN ITEMS ${ARGN})
+       if (IS_ABSOLUTE "${_source}")
+           set(_source_abs "${_source}")
+       else()
+           get_filename_component(_source_abs "${_source}" ABSOLUTE)
+       endif()
+       set_property(GLOBAL APPEND PROPERTY "${target_list}" "${_source_abs}")
+   endforeach()
+endfunction(add_sources)
+add_subdirectory(src)
+add_subdirectory(include)
+add_subdirectory(unit_tests)
+get_property(NALU_SOURCES GLOBAL PROPERTY GlobalSourceList)
+get_property(NALU_HEADERS GLOBAL PROPERTY GlobalHeaderList)
+get_property(NALU_UNIT_SOURCES GLOBAL PROPERTY GlobalUnitSourceList)
+get_property(NALU_UNIT_HEADERS GLOBAL PROPERTY GlobalUnitHeaderList)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 include_directories(${CMAKE_BINARY_DIR}/include)
-add_library(nalu ${SOURCE} ${HEADER})
+add_library(nalu ${NALU_SOURCES})
 target_link_libraries(nalu ${Trilinos_LIBRARIES})
 target_link_libraries(nalu ${YAML_CPP_LIBRARIES})
 target_link_libraries(nalu ${MPI_CXX_LIBRARIES} ${MPI_Fortran_LIBRARIES} ${MPI_C_LIBRARIES})
 
 if(ENABLE_OPENFAST)
   target_link_libraries(nalu ${OpenFAST_LIBRARIES} ${OpenFAST_CPP_LIBRARIES})
-endif (ENABLE_OPENFAST)
+endif()
 
 if(ENABLE_TIOGA)
   target_link_libraries(nalu ${TIOGA_LIBRARIES})
@@ -209,8 +222,6 @@ endif()
 if(ENABLE_HYPRE)
   target_link_libraries(nalu ${HYPRE_LIBRARIES})
 endif()
-
-file(GLOB UNIT_TESTS_SOURCES unit_tests/*.C unit_tests/*/*.C)
 
 set(nalu_ex_name "naluX")
 message("-- CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
@@ -236,7 +247,7 @@ if(CMAKE_BUILD_TYPE STREQUAL "DEBUG")
    set(utest_ex_name "unittestXd")
 endif()
 
-add_executable(${utest_ex_name} unit_tests.C ${UNIT_TESTS_SOURCES})
+add_executable(${utest_ex_name} unit_tests.C ${NALU_UNIT_SOURCES})
 target_link_libraries(${utest_ex_name} nalu)
 target_include_directories(${utest_ex_name} PUBLIC "${CMAKE_SOURCE_DIR}/unit_tests")
 if(MPI_COMPILE_FLAGS)
