Adding ScalarFluxPenaltyElemKernel files to cmakelists source list.

--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -17,6 +17,7 @@ add_sources(GlobalSourceList
    ScalarAdvDiffElemKernel.C
    ScalarDiffElemKernel.C
    ScalarDiffFemKernel.C
+   ScalarFluxPenaltyElemKernel.C
    ScalarMassElemKernel.C
    ScalarOpenAdvElemKernel.C
    ScalarUpwAdvDiffElemKernel.C
