--- a/include/user_functions/CMakeLists.txt
+++ b/include/user_functions/CMakeLists.txt
@@ -4,6 +4,7 @@ add_sources(GlobalHeaderList
    BoussinesqNonIsoMomentumSrcNodeSuppAlg.h
    BoussinesqNonIsoTemperatureAuxFunction.h
    BoussinesqNonIsoVelocityAuxFunction.h
+   CappingInversionTemperatureAuxFunction.h
    ConvectingTaylorVortexPressureAuxFunction.h
    ConvectingTaylorVortexVelocityAuxFunction.h
    FlowPastCylinderTempAuxFunction.h
