--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,6 +31,7 @@ add_sources(GlobalSourceList
    AssembleNodalGradEdgeAlgorithm.C
    AssembleNodalGradElemAlgorithm.C
    AssembleNodalGradNonConformalAlgorithm.C
+   AssembleNodalGradPAlgorithmDriver.C
    AssembleNodalGradUAlgorithmDriver.C
    AssembleNodalGradUBoundaryAlgorithm.C
    AssembleNodalGradUEdgeAlgorithm.C
