Update include list in CMakeLists.txt for pyramid quadrature change

--- a/src/master_element/CMakeLists.txt
+++ b/src/master_element/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_sources(GlobalSourceList
+   CalculateBentHexVolume.F
    CalculateHexVolume.F
    CalculateOctohedronVolume.F
    CalculatePolyhedralArea.F
