Add tensor product kernels
* to activate the option, add the line "tensor_product_cvfem: yes" to the solution options block.  At the moment, you can't mix and match between the old style and the new style.  Only in-situ promoted hexs and HEX_27 elements are supported

* heat conduction, momentum, pressure, and scalar transport implemented

* Boundary conditions still use the old formulation.  There hasn't seemed to be an issue with this, but it's something to not

* There are some dropped terms in the jacobian for momentum with variable viscosity.  Since this is an intermediate stage to using a Jacobian-free solver, and it doesn't seem to be an issue for the couple test cases I ran, I'm keeping the jacobian assembly as is for this pull request.

 * Added a consolidated option for the projected nodal gradient eqsys.  "use_consolidated_png: yes" in solution options.  Only the new type of kernel is supported atm

--- a/include/kernel/CMakeLists.txt
+++ b/include/kernel/CMakeLists.txt
@@ -7,25 +7,45 @@ add_sources(GlobalHeaderList
    KernelBuilderLog.h
    MomentumActuatorSrcElemKernel.h
    MomentumAdvDiffElemKernel.h
+   MomentumAdvDiffHOElemKernel.h
    MomentumBuoyancyBoussinesqSrcElemKernel.h
    MomentumBuoyancySrcElemKernel.h
    MomentumCoriolisSrcElemKernel.h
    MomentumHybridTurbElemKernel.h
    MomentumMassElemKernel.h
+   MomentumMassHOElemKernel.h
    MomentumOpenAdvDiffElemKernel.h
    MomentumSymmetryElemKernel.h
    MomentumUpwAdvDiffElemKernel.h
    MomentumWallFunctionElemKernel.h
+   PressurePoissonHOElemKernel.h
+   ProjectedNodalGradientHOElemKernel.h
    ScalarAdvDiffElemKernel.h
    ScalarDiffElemKernel.h
+   ScalarDiffHOElemKernel.h
    ScalarDiffFemKernel.h
    ScalarFluxPenaltyElemKernel.h
    ScalarMassElemKernel.h
+   ScalarMassHOElemKernel.h
    ScalarOpenAdvElemKernel.h
    ScalarUpwAdvDiffElemKernel.h
    SpecificDissipationRateSSTSrcElemKernel.h
+   TensorProductCVFEMMomentumAdvDiff.h
+   TensorProductCVFEMDiffusion.h
+   TensorProductCVFEMMomentumBDF2TimeDerivative.h
+   TensorProductCVFEMPressurePoisson.h
+   TensorProductCVFEMPNG.h
+   TensorProductCVFEMScalarAdvDiff.h
+   TensorProductCVFEMScalarBDF2TimeDerivative.h
+   TensorProductCVFEMSource.h
    TurbKineticEnergyKsgsDesignOrderSrcElemKernel.h
    TurbKineticEnergyKsgsSrcElemKernel.h
    TurbKineticEnergySSTDESSrcElemKernel.h
    TurbKineticEnergySSTSrcElemKernel.h
 )
+
+
+
+
+
+
