--- a/include/user_functions/CMakeLists.txt
+++ b/include/user_functions/CMakeLists.txt
@@ -12,6 +12,7 @@ add_sources(GlobalHeaderList
    KovasznayVelocityAuxFunction.h
    LinearRampMeshDisplacementAuxFunction.h
    OneTwoTenVelocityAuxFunction.h
+   PerturbedShearLayerAuxFunctions.h
    RayleighTaylorMixFracAuxFunction.h
    SinMeshDisplacementAuxFunction.h
    SinProfileChannelFlowVelocityAuxFunction.h
@@ -28,9 +29,11 @@ add_sources(GlobalHeaderList
    SteadyThermalContact3DSrcNodeSuppAlg.h
    SteadyThermalContactAuxFunction.h
    SteadyThermalContactSrcElemSuppAlg.h
+   SteadyThermalContactSrcHOElemKernel.h
    SteadyThermalContactSrcNodeSuppAlg.h
    TaylorGreenPressureAuxFunction.h
    TaylorGreenVelocityAuxFunction.h
+   TGMMSHOElemKernel.h
    TornadoAuxFunction.h
    VariableDensityContinuitySrcElemSuppAlg.h
    VariableDensityContinuitySrcNodeSuppAlg.h
