--- a/src/element_promotion/CMakeLists.txt
+++ b/src/element_promotion/CMakeLists.txt
@@ -3,11 +3,11 @@ add_sources(GlobalSourceList
    ElementDescription.C
    HexNElementDescription.C
    LagrangeBasis.C
+   NodeMapMaker.C
    PromoteElement.C
    PromotedElementIO.C
    PromotedPartHelper.C
    QuadNElementDescription.C
-   QuadratureKernels.C
    QuadratureRule.C
    TensorProductQuadratureRule.C
 )
