--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -6,20 +6,27 @@ add_sources(GlobalSourceList
    KernelBuilderLog.C
    MomentumActuatorSrcElemKernel.C
    MomentumAdvDiffElemKernel.C
+   MomentumAdvDiffHOElemKernel.C
    MomentumBuoyancyBoussinesqSrcElemKernel.C
    MomentumBuoyancySrcElemKernel.C
    MomentumCoriolisSrcElemKernel.C
    MomentumHybridTurbElemKernel.C
    MomentumMassElemKernel.C
+   MomentumMassHOElemKernel.C
    MomentumOpenAdvDiffElemKernel.C
    MomentumSymmetryElemKernel.C
    MomentumUpwAdvDiffElemKernel.C
    MomentumWallFunctionElemKernel.C
+   PressurePoissonHOElemKernel.C
+   ProjectedNodalGradientHOElemKernel.C
    ScalarAdvDiffElemKernel.C
+   ScalarAdvDiffHOElemKernel.C
    ScalarDiffElemKernel.C
+   ScalarDiffHOElemKernel.C
    ScalarDiffFemKernel.C
    ScalarFluxPenaltyElemKernel.C
    ScalarMassElemKernel.C
+   ScalarMassHOElemKernel.C
    ScalarOpenAdvElemKernel.C
    ScalarUpwAdvDiffElemKernel.C
    SpecificDissipationRateSSTSrcElemKernel.C
@@ -28,3 +35,4 @@ add_sources(GlobalSourceList
    TurbKineticEnergySSTDESSrcElemKernel.C
    TurbKineticEnergySSTSrcElemKernel.C
 )
+
