--- a/src/user_functions/CMakeLists.txt
+++ b/src/user_functions/CMakeLists.txt
@@ -12,6 +12,7 @@ add_sources(GlobalSourceList
    KovasznayVelocityAuxFunction.C
    LinearRampMeshDisplacementAuxFunction.C
    OneTwoTenVelocityAuxFunction.C
+   PerturbedShearLayerAuxFunctions.C
    RayleighTaylorMixFracAuxFunction.C
    SinMeshDisplacementAuxFunction.C
    SinProfileChannelFlowVelocityAuxFunction.C
@@ -24,6 +25,7 @@ add_sources(GlobalSourceList
    SteadyThermal3dContactAuxFunction.C
    SteadyThermal3dContactDtDxAuxFunction.C
    SteadyThermal3dContactSrcElemKernel.C
+   SteadyThermalContactSrcHOElemKernel.C
    SteadyThermal3dContactSrcElemSuppAlgDep.C
    SteadyThermalContact3DSrcNodeSuppAlg.C
    SteadyThermalContactAuxFunction.C
@@ -31,6 +33,7 @@ add_sources(GlobalSourceList
    SteadyThermalContactSrcNodeSuppAlg.C
    TaylorGreenPressureAuxFunction.C
    TaylorGreenVelocityAuxFunction.C
+   TGMMSHOElemKernel.C
    TornadoAuxFunction.C
    VariableDensityContinuitySrcElemSuppAlg.C
    VariableDensityContinuitySrcNodeSuppAlg.C
