Fix up unit-test for alignment of shared-mem-views.
This unit-test currently has 8 as the 'gold value'. Once a fix
is made in Kokkos, I expect the gold value to change to
be KOKKOS_MEMORY_ALIGNMENT.

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -23,6 +23,7 @@ add_sources(GlobalUnitSourceList
    UnitTestPecletFunction.C
    UnitTestQuadElementPromotion.C
    UnitTestRealm.C
+   UnitTestShmemAlignment.C
    UnitTestSideIsInElement.C
    UnitTestSideNodeOrdinals.C
    UnitTestSidePCoords.C
