New AssembleMomentumEdgeABLTopBC.C routine added to enforce the new upper boundary condition.  This version runs inside the symmetry boundary condition and is activated by the presence of the keyword grid_dimensions in the input file.
A include/AssembleMomentumEdgeABLTopBC.h
A src/AssembleMomentumEdgeABLTopBC.C
M include/NaluParsing.h
M src/AssembleMomentumEdgeABLTopBC.C
M src/CMakeLists.txt
M src/LowMachEquationSystem.C
M src/NaluParsing.C

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ add_sources(GlobalSourceList
    AssembleHeatCondIrradWallSolverAlgorithm.C
    AssembleHeatCondWallSolverAlgorithm.C
    AssembleMomentumEdgeABLWallFunctionSolverAlgorithm.C
+   AssembleMomentumEdgeABLTopBC.C
    AssembleMomentumEdgeOpenSolverAlgorithm.C
    AssembleMomentumEdgeSolverAlgorithm.C
    AssembleMomentumEdgeSymmetrySolverAlgorithm.C
