Extrapolate pressure gradient to opposing face instead of zeroing assembled quantity for "explicitly zero pressure gradient" optionn

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,7 @@ add_sources(GlobalSourceList
    AssembleMomentumNonConformalSolverAlgorithm.C
    AssembleNodalGradAlgorithmDriver.C
    AssembleNodalGradBoundaryAlgorithm.C
+   AssembleNodalGradPOpenBoundaryAlgorithm.C
    AssembleNodalGradEdgeAlgorithm.C
    AssembleNodalGradElemAlgorithm.C
    AssembleNodalGradNonConformalAlgorithm.C
