--- a/examples/abl_neutral/input_files/nalu_preprocess.yaml
+++ b/examples/abl_neutral/input_files/nalu_preprocess.yaml
@@ -10,6 +10,8 @@ nalu_abl_mesh:
 
   spec_type: bounding_box
 
+  fluid_part_name: fluid_part
+
   vertices:
     - [0.0, 0.0, 0.0]
     - [5000.0, 5000.0, 1000.0]
@@ -47,16 +49,26 @@ nalu_preprocess:
     #
     # Use `ncdump -v eb_names <exodus_file>` to determine the mesh blocks
     #
-    fluid_parts: [fluid]
+    fluid_parts: [fluid_part]
 
     temperature:
       heights: [    0, 650.0, 750.0, 1000.0 ]
       values:  [300.0, 300.0, 308.0,  308.75]
+
+      # Optional section to add random perturbations to temperature field
+#      perturbations:
+#        amplitude: 0.8 # in Kelvin
+#        cutoff_height: 600.0 # Perturbations below capping inversion
+#        skip_periodic_parts: [east, west, north, south]
 
     velocity:
       heights: [0.0, 1000.0]
       values:
         - [7.250462296293199, 3.380946093925596, 0.0]
         - [7.250462296293199, 3.380946093925596, 0.0]
-      perturbation:
-        wait_for_shreyas
+
+      # Perturbations to add to the velocity field
+      perturbations:
+        reference_height: 50.0   # Reference height for damping
+        amplitude: [1.0, 1.0]    # Perturbation amplitudes in Ux and Uy
+        periods: [4.0, 4.0]      # Num. periods in x and y directions
