Add wind-utils to nalu-wind repository
Include wind-utils as a submodule within nalu-wind and add necessary
links in CMakeLists.txt to allow compilation of wind-utils from within
nalu-wind repo for users.

Introduce a new variable ENABLE_WIND_UTILS (default: OFF) to allow user
to activate building wind-utils from within nalu-wind.

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = reg_tests/mesh
 	url = https://github.com/Exawind/meshes.git
         ignore = dirty
+[submodule "wind-utils"]
+	path = wind-utils
+	url = git@github.com:exawind/wind-utils.git
